2005-05-02  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: start of new gallery
	* src/ImageSelect.py: start of new gallery
	* src/Witness.py: fix listmodel
	* src/const.py.in: LDS temple names
	* src/edit_person.glade: start of new gallery 

2005-04-30  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: Add support for inline editing
	* src/EventEdit.py: Don't commit events here - should be commited
	elsewhere
	* src/ListModel.py: Add support for table callback functions
	to update data after inline editing
	* src/const.py.in: convert Alternate Birth and Alternate Death to
	Birth and Death
	
2005-04-29  Alex Roitman  <shura@gramps-project.org>
	* src/edit_person.glade: Compact name edit button.

2005-04-29  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/PHPGedViewConnector.py, src/plugins/phpgedview.glade:
	New files. Start of a client interface for phpGedView.
	unfinished. Put them in CVS to not loose them.

2005-04-28  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: remove dead logic for birth/death editing,
	fix list handling
	* src/EventEdit.py: fix callbacks for updating events
	* src/GrampsDbBase.py: shorten handles
	* src/Utils.py: shorten handles
	* src/edit_person.glade: fix image spacing
	
2005-04-27  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: rewrite of tabbed lists
	* src/EventEdit.py: bold the label
	* src/ListModel.py: allow column types to be specified
	* src/edit_person.glade: tab improvements

2005-04-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/gramps_main.py (__init__): Avoid TypeError in schema error
	message
	* src/StartupDialog.py (__init__): Catch Schema errors

2005-04-26  Alex Roitman  <shura@gramps-project.org>
	* NEWS, configure.in, src/EditPerson.py, src/EditSource.py,
	src/FamilyView.py, src/ImageSelect.py, src/Marriage.py,
	src/MergePeople.py, src/ReadGedcom.py, src/Report.py,
	src/ReportUtils.py, src/gedcomimport.glade, src/gramps.glade,